--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="register">Register</string>
     <string name="address">Address</string>
     <string name="description">Description</string>
+    <string name="new_category">New Category</string>
 </resources>
