--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="address">Address</string>
     <string name="description">Description</string>
     <string name="new_category">New Category</string>
+    <string name="data_no_found">Data no found</string>
+    <string name="all">All</string>
 </resources>
