--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,4 +21,5 @@
     <string name="description">Descripción</string>
     <string name="data_no_found">Datos no encontrados</string>
     <string name="all">Todos</string>
+    <string name="filter">Filtro</string>
 </resources>
