--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">VisitSucre</string>
     <string name="account_type">com.apaza.moises.visitsucre.account</string>
+    <string name="provider_authority">com.apaza.moises.visitsucre</string>
     <string name="action_settings">Settings</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
