--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="provider_authority">com.apaza.moises.visitsucre</string>
     <string name="action_settings">Settings</string>
 
+    <string name="google_key">AIzaSyCS_fNa0Ea1GZEii0HUULcwnuF-2ThVnsQ</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_moises">Hello Moises</string>
 
