--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="data_no_found">Data no found</string>
     <string name="all">All</string>
     <string name="filter">Filter</string>
+    <string name="select_location">Select location of the place</string>
 </resources>
