--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="all">All</string>
     <string name="filter">Filter</string>
     <string name="select_location">Select location of the place</string>
+    <string name="take_photo">Take photo</string>
+    <string name="from_gallery">From gallery</string>
+    <string name="add_image">Add image</string>
 </resources>
