--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,4 +22,14 @@
     <string name="data_no_found">Datos no encontrados</string>
     <string name="all">Todos</string>
     <string name="filter">Filtro</string>
+    <string name="add_image">Añadir imagen</string>
+    <string name="from_gallery">Desde galeria</string>
+    <string name="hotel">Hotel</string>
+    <string name="new_category">Nueva categoría</string>
+    <string name="select_location">Seleccionar ubicación del lugar</string>
+    <string name="take_photo">Tomar foto</string>
+    <string name="log_out">Cerrar sesión</string>
+    <string name="email">Correo electrónico</string>
+    <string name="action_settings">Ajustes</string>
+    <string name="select_icon">Seleccione un icono</string>
 </resources>
