--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="google_key">AIzaSyCS_fNa0Ea1GZEii0HUULcwnuF-2ThVnsQ</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_moises">Hello Moises</string>
 
     <string name="access">Access</string>
@@ -16,7 +15,7 @@
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
     <string name="password">Password</string>
-    <string name="email">E-mail</string>
+    <string name="email">Email</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="first_time_here">First time here?</string>
@@ -31,7 +30,7 @@
     <string name="foods">Foods</string>
     <string name="hotel">Hotel</string>
     <string name="config">Setting</string>
-    <string name="log_out">Logout</string>
+    <string name="log_out">Log out</string>
     <string name="register">Register</string>
     <string name="address">Address</string>
     <string name="description">Description</string>
@@ -43,4 +42,5 @@
     <string name="take_photo">Take photo</string>
     <string name="from_gallery">From gallery</string>
     <string name="add_image">Add image</string>
+    <string name="select_icon">Select a icon</string>
 </resources>
