--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,16 +9,13 @@
     <string name="hello_moises">Hello Moises</string>
 
     <string name="access">Access</string>
-    <string name="signUp">Sign Up</string>
     <string name="on_boarding_subtitle1">Bla bla bla bla bla bla bla 1</string>
-    <string name="already_have_account">Already have an account?</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password?</string>
-    <string name="first_time_here">First time here?</string>
     <string name="connect_with">Connect with</string>
     <string name="access_with_email">Or access with your e-mail</string>
     <string name="create_account">Or create an account</string>
@@ -43,4 +40,5 @@
     <string name="from_gallery">From gallery</string>
     <string name="add_image">Add image</string>
     <string name="select_icon">Select a icon</string>
+    <string name="loading">Loading...</string>
 </resources>
